# journey

./: .gitignore  Cargo.toml  foo.txt  population.json
src/: lib.rs  main.rs
src/advance/: adder.rs  algorithm.rs  city.rs  concurrency.rs  error.rs  ffi.rs  guarantee.rs  heap.rs  mod.rs
src/api/: mod.rs
src/basic/: collections.rs  mod.rs  my_mod.rs  t_tuple.rs
src/example/: association.rs  basic.rs  closure.rs  common.rs  drop.rs  flow.rs  func.rs  generic.rs  guess.rs  method.rs  mod.rs  overload.rs  pointer.rs  string.rs  trait_object.rs  traits.rs
src/fs_demo/: basic.rs  mod.rs  reading.rs
src/http/: around.rs  connect.rs  content_type.rs  echo.rs  future_demo.rs  hyper_demo.rs  mod.rs  time.rs  tokio2_demo.rs  tokio_demo.rs
src/newegg/: logical.rs  mod.rs
src/tests/: integration_test.rs
src/tokio_demo/: mod.rs  task.rs
