[package]
name = "journey"
version = "0.0.1"
authors = ["benjamin yan <benjamin.c.yan@newegg.com>"]

[[bin]]
name= "journey"

[dependencies]
getopts="=0.2.17"
serde = "1.0"
serde_derive = "1.0"

# serde_json is just for the example, not required in general
serde_json = "1.0"
libc="0.2.0"

iron = "0.6.0"
time = "0.1.39"
hyper = "0.11.21"
mime="*"
