[package]
name = "journey"
version = "0.0.1"
authors = ["benjamin yan <benjamin.c.yan@newegg.com>"]

[[bin]]
name= "journey"

[dependencies]
getopts="=0.2.17"
serde = "1.0"
serde_derive = "1.0"

# serde_json is just for the example, not required in general
serde_json = "1.0"
libc="0.2.0"

time = "0.1"
futures="0.1"
iron = "0.6.0"
hyper = "0.10"
pretty_env_logger="0.2.2"
tokio="0.1"
tokio-io="0.1"
tokio-core="*"
mime="0.2.6"

bytes="0.4"